ctowasm/test/samples/error/test.c
#include <source_stdlib>

int main() {
  int *p =0;
}